# survival-list

./: README.md  package.json
server/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  _build.rs  build.rs  container.rs  fly.toml  service.yaml  sqlx-data.json
server/.sqlx/: query-077237ef6e7664e8b688767921473a7af27a51b703b747d34d8199ac2315c7ed.json  query-0d2d3db1a852fc49a0334ad071c79524a3ab0434614dd330569b7d2b4dbecd7a.json  query-0ebdc4706c94417fd03eb4fd1d0ce7dbd9dad5cbd4a3fddcd89791aee30df8d7.json  query-23885329a12e673a5b439d52f06d8b71d9472da77af0b1a6e5bc85694236f3d4.json  query-259872f3b0ddf31c70d855c4bc40a2cb8055efe77dfd20a271b964075f0b5b04.json  query-29a2e90c1d7e246ccfc4bf02af698eb19ee28950e467990f2db633c79c71d1ae.json  query-33fb99aa9fd2ae03664e2ab838df099e673912f61ae5eff025a3ea5e5507909b.json  query-3ca8e3b2b68c196f66ab3faa7be66eb48a81a95bfa9a7b75bb9275a03c8443ef.json  query-3ee3b2e61ebcd26cb17cbb8aa4ed13ae25a5e344abfc4feb15d6de1ede745fa5.json  query-4ebe4f8512bab12d12bef9622cb8a2abd1dcb7d4b346f24317888a669ac1019b.json  query-5207d2887c50a44bf6d0b6b5c0a326dd595b1de1a1b0d9d40d8f2d723d1aea46.json  query-589777393d7233abd707617793c848b9817c6b226146c1227db83ab88628b08c.json  query-67343a717492c0b43e38b452685c4d5abb43645fb403c685a3347f1f2a537d19.json  query-6ce4ba473682291f826b9ce5d2294132014c9b7948993827ca9e5ffa34355523.json  query-73a83166e980f4fa71c86899a4be0a91abf311fb8aa747a4f77f3acf522f0376.json  query-792c754e379cb5de080a08b3fd0036ba44e3c372559d46fb879bfa22cce47239.json  query-81bebe3e273a2828324e250eb4aeb93d62fab9f600f8e9d858ff50749ee31ed6.json  query-89634b2042189f891057f5fd5072eb4d6ca3067ec863fca212aca81df06880bf.json  query-959dd1255da06b62f8350e2c1735f617ab83305fc0a274fa8c25ea1229297df0.json  query-99cb7feb76b5395b61af9edbffc05c5abd6bacb7d81db329075fe676b515cf42.json  query-9c00bfa9e6f1fdd9e047dbb751bc96e1d1576d89f0acfd02ba615b641e397378.json  query-9e73fabbb8d4aee1ebf4a1ad9c442c9e18ee096585fc71349664a46d9c3aac11.json  query-9f4f3758dc89a08a53045521025882b21400c4e8c28369c3778dbf35a43a6f47.json  query-af6049b66d2f4c21bac38e8c1cb66e186f1881809a0c3aef0220ddc61f119619.json  query-b0209a352c2de8f2a02c78d266393ffbb5da9bd78bcff121fe387dfdf08230f8.json  query-b5ed7df19e5ede92f355694fa31c4e8705912b793047812d28daf6c98b0073ed.json  query-c42b3fe3bb44ec88e797bcba34bd09e399ee1feb4f61f847a77b21f95cf0ab9e.json  query-c69f2e7d3374e4881e9f0b7d13351e8646b318f1d4e3563545921190a8341f11.json  query-d3bf0c822afaaec3180fcaaf1968d65987ed1a7a6f32d39476c2532cb7cc8060.json  query-dd7f053a00ca81448b07f197e0f24f5897fcb204dc386a1625a34f9531c7f001.json  query-e427e764c35a2a46ef61a0299b466af362e9a93d611a794d5a39b50d31573140.json  query-ea07e2228de7a7e04e967f5970faf84108fe81657dba9c3c786cc2157989951a.json  query-faf1bfc19670f94edb3ed58fb5b1fdd6bc9e61021b81462f244dd46a66c428f1.json  query-fb96380621e3048061609e3559381bbd403769f8caa2b0afa4235ce2d791936d.json  query-ff01a4953967e5f06e7c85fa16e8f154a71db744be3bd431abeb14be06e98064.json
server/migrations/: 20230329154714_period_constraints.sql  20230402194214_user_groups.sql  20230402200632_task_responsible_required.sql  20230402201445_user_info.sql  20230411184043_add_uid_to_groups.sql  20230412201406_change_task_group_to_single_relation.sql  20230519105732_add_estimate_to_tasks.sql  20230524180702_model_recurring_events.sql  20230529141601_make_tasks_title_not_null.sql  20230603104014_add_created_at_columns.sql  20230706113446_rework_category_tables.sql  20230707114026_add_base_categories.sql
server/queries/: tasks.sql
server/src/: db.rs  error.rs  lib.rs  main.rs  response.rs  router.rs  server.rs  state.rs
server/src/auth/: fetch_keys.rs  get_max_age.rs  jwk.rs  jwk_auth.rs  mod.rs  trait.rs  verifier.rs
server/src/db/: category.rs  cornucopia.rs  database.rs  group.rs  mod.rs  task.rs  transaction.rs  user.rs
server/src/router/: create_task.rs  get_tasks.rs
server/src/service/: mod.rs  ping.rs  v1.rs
server/src/tests/: auth.rs  mod.rs  postgres.rs  server.rs  v1.rs
server/tests/utils/: auth.rs  mod.rs  postgres.rs  server.rs
server_old/: Cargo.toml  package.json  schema.sql  wrangler.toml
server_old/src/: db.rs  lib.rs
(+195 files in other folders)
