[package]
name = "server"
version = "0.1.1"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures-core = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
pretty_env_logger = "0.4.0"
prost = "0.11.9"
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "tls", "offline", "uuid"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["gzip"] }
tracing = { version = "0.1.37", features = ["log"] }

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "tls", "offline", "uuid"] }
tokio = { version = "1.28.2", features = ["full"] }
tonic-build = "0.9.2"

[dev-dependencies]
dockertest = "0.3.1"
env_logger = "0.10.0"
test-log = { version = "0.2.12", features = ["trace"] }
tokio-util = "0.7.8"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
