[package]
name = "server"
version = "0.1.1"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures-core = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.167", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "uuid", "json"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["gzip"] }
tracing = { version = "0.1.37", features = ["log"] }

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "uuid", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
tonic-build = "0.9.2"

[dev-dependencies]
env_logger = "0.10.0"
rand = "0.8.5"
test-log = { version = "0.2.12", features = ["trace"] }
tokio-util = "0.7.8"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
with_postgres_ready = "0.1.1"
