[package]
name = "survival-list-server"
version = "0.1.0"
authors = ["Bjarke Bondo Andersen"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
native-tls = "0.2.11"
postgres = { version = "0.19.4", features = ["with-time-0_3"] }
postgres-native-tls = "0.5.0"
serde_json = "1.0.91"
time = "0.3.17"
worker = "0.0.12"

[build-dependencies]
cornucopia = "0.9.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
